--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^5.0.1",
     "url-loader": "^4.1.1"
   },
