--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "create": "webpack",
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && webpack serve"
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && webpack --config webpack.prod.js",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && webpack-dev-server --open --config webpack.dev.js"
   },
   "babel": {
     "presets": [
@@ -69,6 +70,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^5.2.7",
     "html-webpack-plugin": "^4.5.2",
     "sass": "^1.53.0",
@@ -76,6 +78,7 @@
     "style-loader": "^2.0.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^3.11.3"
+    "webpack-dev-server": "^4.9.3",
+    "webpack-merge": "^4.2.2"
   }
 }
