added chakra-ui v1

--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.0.0",
+    "framer-motion": "^4.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
     "ipfs": "^0.59.0",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
