--- a/package.json
+++ b/package.json
@@ -45,13 +45,15 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.0.0",
-    "framer-motion": "^4.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "framer-motion": "^4.0.0",
     "ipfs": "^0.59.0",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
+    "moment": "^2.29.4",
     "orbit-db": "^0.28.6",
     "orbit-db-identity-provider": "^0.3.0",
     "orbit-db-io": "1.0.2",
@@ -59,6 +61,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-markdown": "^8.0.3",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^5.0.1",
     "url-loader": "^4.1.1"
   },
