--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "chakra-ui-markdown-renderer": "^4.1.0",
     "framer-motion": "^4.0.0",
     "ipfs": "^0.59.0",
     "mobx": "^6.6.1",
