did with mnemonic - see and put into line BlogStore:39

--- a/package.json
+++ b/package.json
@@ -53,17 +53,20 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@ezerous/eth-identity-provider": "^0.2.0",
+    "bip39": "^3.0.4",
     "chakra-ui-markdown-renderer": "^4.1.0",
     "ethers": "^5.7.0",
     "framer-motion": "^4.0.0",
     "ipfs": "^0.59.0",
+    "key-did-provider-ed25519": "^2.0.1",
+    "key-did-resolver": "^2.1.1",
     "level-js": "^6.1.0",
     "localstorage-level-migration": "^0.1.0",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
     "moment": "^2.29.4",
     "orbit-db": "^0.28.6",
-    "orbit-db-identity-provider": "0.4.0",
+    "orbit-db-identity-provider": "^0.4.0",
     "orbit-db-io": "1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
