--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.35.0",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
     "react-router-dom": "^5.0.1",
