--- a/package.json
+++ b/package.json
@@ -52,11 +52,15 @@
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@libp2p/interface-transport": "^2.0.1",
+    "@libp2p/peer-id": "^1.1.16",
+    "@libp2p/webtransport": "^1.0.4",
     "chakra-ui-contextmenu": "^1.0.4",
     "chakra-ui-markdown-renderer": "^4.1.0",
     "ethers": "^5.7.0",
     "framer-motion": "^4.0.0",
     "ipfs": "^0.59.0",
+    "libp2p-noise": "^4.0.0",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
     "moment": "^2.29.4",
