--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
-  "name": "orbit-db-starter-blog",
-  "private": true,
+  "name": "orbitblog",
+  "private": false,
   "description": "A starter for a blog powered by Orbit-DB and IPFS",
-  "version": "0.1.0",
-  "author": "Nico Krause nico.krause@le-space.de",
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "0BSD",
+  "version": "0.1.2",
+  "author": "Nico Krause nico.krause@decentrasol.network",
+  "homepage": "https://github.com/inspiraluna/orbitdb-blog.git#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/inspiraluna/orbitdb-blog"
   },
+  "main": "dist/index_bundle.js",
+  "module": "dist/index_bundle.js",
+  "files": [
+    "dist",
+    "src",
+    "README.md"
+  ],
+  "keywords": [
+    "orbit-db",
+    "decentralized",
+    "p2p",
+    "peer2peer",
+    "blog"
+  ],
   "scripts": {
     "create": "webpack",
+    "build-lib-orig": "rm -rf dist && NODE_ENV=production babel lib --out-dir dist --copy-files",
+    "build-lib": "export NODE_OPTIONS=--openssl-legacy-provider && webpack --env ENVIRONMENT=production --config webpack.build-lib.js",
     "build": "export NODE_OPTIONS=--openssl-legacy-provider && webpack --env ENVIRONMENT=production --config webpack.common.js",
     "start": "export NODE_OPTIONS=--openssl-legacy-provider && webpack-dev-server --env ENVIRONMENT=development --open --config webpack.common.js"
   },
@@ -25,6 +37,18 @@
     ],
     "plugins": [
       [
+        "@babel/plugin-proposal-private-methods",
+        {
+          "loose": true
+        }
+      ],
+      [
+        "@babel/plugin-proposal-private-property-in-object",
+        {
+          "loose": true
+        }
+      ],
+      [
         "@babel/plugin-transform-runtime",
         {
           "regenerator": true
@@ -33,7 +57,7 @@
       [
         "@babel/plugin-proposal-decorators",
         {
-          "legacy": true
+          "version": "legacy"
         }
       ],
       [
@@ -44,6 +68,9 @@
       ]
     ]
   },
+  "peerDependencies": {
+    "react": "*"
+  },
   "resolutions": {
     "acorn": "npm:acorn-with-stage3"
   },
@@ -52,11 +79,13 @@
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@libp2p/interface-transport": "^2.0.1",
     "chakra-ui-contextmenu": "^1.0.4",
     "chakra-ui-markdown-renderer": "^4.1.0",
     "ethers": "^5.7.0",
     "framer-motion": "^4.0.0",
     "ipfs": "^0.59.0",
+    "libp2p-noise": "^4.0.0",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
     "moment": "^2.29.4",
@@ -67,7 +96,7 @@
     "pretty-browser-log": "^1.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet": "6.0.0",
     "react-hook-form": "^7.35.0",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
@@ -76,9 +105,11 @@
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.6",
     "@babel/core": "^7.18.6",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.18.6",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.18.6",
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
