--- a/package.json
+++ b/package.json
@@ -41,6 +41,24 @@
         {
           "loose": true
         }
+      ],
+      [
+        "@babel/plugin-transform-class-properties",
+        {
+          "loose": true
+        }
+      ],
+      [
+        "@babel/plugin-transform-private-methods",
+        {
+          "loose": true
+        }
+      ],
+      [
+        "@babel/plugin-transform-private-property-in-object",
+        {
+          "loose": true
+        }
       ]
     ]
   },
@@ -49,14 +67,14 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
-    "@chakra-ui/react": "^1.0.0",
-    "@emotion/react": "^11.0.0",
-    "@emotion/styled": "^11.0.0",
+    "@chakra-ui/react": "^1.6.10",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "chakra-ui-contextmenu": "^1.0.4",
     "chakra-ui-markdown-renderer": "^4.1.0",
     "ethers": "^5.7.0",
-    "framer-motion": "^4.0.0",
-    "ipfs": "^0.59.0",
+    "framer-motion": "^4.1.17",
+    "ipfs": "^0.59.1",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
     "moment": "^2.29.4",
@@ -82,21 +100,21 @@
     "@babel/plugin-transform-runtime": "^7.18.6",
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
-    "babel-loader": "^8.2.5",
+    "babel-loader": "^8.2.6",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^5.2.7",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
-    "sass": "^1.53.0",
-    "sass-loader": "^10.3.1",
+    "sass": "^1.53.1",
+    "sass-loader": "^10.3.2",
     "style-loader": "^2.0.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3",
+    "webpack-cli": "^4.10.1",
+    "webpack-dev-server": "^4.9.4",
     "webpack-merge": "^4.2.2"
   }
 }
